--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-player": "^1.15.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -32,8 +33,9 @@
     "extends": [
       "react-app",
       "airbnb",
-      "prettier"],
-    "parser" : "babel-eslint"
+      "prettier"
+    ],
+    "parser": "babel-eslint"
   },
   "browserslist": {
     "production": [
