--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-player": "^1.15.2",
