--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-coverflow": "^0.2.20",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-multi-carousel": "^2.5.2",
     "react-player": "^1.15.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
