--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-modal": "^3.11.2",
     "react-multi-carousel": "^2.5.2",
     "react-player": "^1.15.2",
     "react-redux": "^7.1.3",
