--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^3.9.0",
     "react-modal": "^3.11.2",
     "react-multi-carousel": "^2.5.2",
+    "react-paginate": "^6.3.2",
     "react-player": "^1.15.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
