--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-modal": "^3.11.2",
+    "react-modal-video": "^1.2.3",
     "react-multi-carousel": "^2.5.2",
     "react-paginate": "^6.3.2",
     "react-player": "^1.15.2",
