--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-floating-button-menu": "^2.0.8",
     "react-icons": "^3.9.0",
     "react-modal": "^3.11.2",
     "react-modal-video": "^1.2.3",
@@ -26,7 +27,8 @@
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
