--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "iso-639-1": "^2.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-floating-button-menu": "^2.0.8",
