--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "what_to_watch",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@material-ui/core": "^4.9.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "iso-639-1": "^2.1.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-autosuggest": "^9.4.3",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-floating-button-menu": "^2.0.8",
-    "react-icons": "^3.10.0",
-    "react-modal": "^3.11.2",
-    "react-modal-video": "^1.2.3",
-    "react-multi-carousel": "^2.5.2",
-    "react-paginate": "^6.3.2",
-    "react-player": "^1.15.2",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-spinners": "^0.8.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "airbnb",
-      "prettier"
-    ],
-    "parser": "babel-eslint"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "homepage": "https://woobaik.github.io/what_to_watch"
+	"name": "what_to_watch",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/core": "^10.0.27",
+		"@material-ui/core": "^4.9.5",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"axios": "^0.19.2",
+		"bootstrap": "^4.4.1",
+		"iso-639-1": "^2.1.0",
+		"node-sass": "^4.13.1",
+		"react": "^16.12.0",
+		"react-autosuggest": "^9.4.3",
+		"react-bootstrap": "^1.0.0-beta.16",
+		"react-dom": "^16.12.0",
+		"react-floating-button-menu": "^2.0.8",
+		"react-icons": "^3.10.0",
+		"react-modal": "^3.11.2",
+		"react-modal-video": "^1.2.3",
+		"react-multi-carousel": "^2.5.2",
+		"react-paginate": "^6.3.2",
+		"react-player": "^1.15.2",
+		"react-redux": "^7.1.3",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.4.0",
+		"react-spinners": "^0.8.0",
+		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0",
+		"styled-components": "^5.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"airbnb",
+			"prettier"
+		],
+		"parser": "babel-eslint"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"homepage": "https://woobaik.github.io/what_to_watch/#"
 }
