--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.4.1",
+		"gh-pages": "^3.1.0",
 		"iso-639-1": "^2.1.0",
 		"node-sass": "^4.13.1",
 		"react": "^16.12.0",
